--- a/FlowField/Packages/manifest.json
+++ b/FlowField/Packages/manifest.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.3.7",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.collab-proxy": "1.3.8",
     "com.unity.ide.rider": "1.2.1",
-    "com.unity.ide.visualstudio": "2.0.1",
+    "com.unity.ide.visualstudio": "2.0.2",
     "com.unity.ide.vscode": "1.2.1",
     "com.unity.test-framework": "1.1.14",
     "com.unity.textmeshpro": "3.0.0-preview.1",
