Changed how grid gizmos are displayed. Added in time keeping to test how long functions take to run.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@
 [Mm]emoryCaptures/
 2DAssets/
 2DAssets.meta
+Materials/
+Materials.meta
+Resources/
+Resources.meta
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
