--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ Materials/
 Materials.meta
 Resources/
 Resources.meta
+Plugins/
+Plugins.meta
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
