--- a/FlowField/Packages/manifest.json
+++ b/FlowField/Packages/manifest.json
@@ -5,6 +5,8 @@
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.2",
     "com.unity.ide.vscode": "1.2.1",
+    "com.unity.physics": "0.4.1-preview",
+    "com.unity.rendering.hybrid": "0.8.0-preview.18",
     "com.unity.test-framework": "1.1.14",
     "com.unity.textmeshpro": "3.0.0-preview.1",
     "com.unity.timeline": "1.3.2",
