--- a/FlowField/Assets/Scripts/ECS/ECS.asmdef
+++ b/FlowField/Assets/Scripts/ECS/ECS.asmdef
@@ -4,7 +4,9 @@
         "GUID:734d92eba21c94caba915361bd5ac177",
         "GUID:63afb046c8423dd448ae7aba042ea63d",
         "GUID:d8b63aba1907145bea998dd612889d6b",
-        "GUID:e0cd26848372d4e5c891c569017e11f1"
+        "GUID:e0cd26848372d4e5c891c569017e11f1",
+        "GUID:a5baed0c9693541a5bd947d336ec7659",
+        "GUID:8819f35a0fc84499b990e90a4ca1911f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
